# StockTradingSystem

./: CMakeLists.txt  README.md  a.out  main.cpp
include/: order.h  orderBook.h  stock.h  trader.h
src/: order.cpp  orderBook.cpp  stock.cpp  trader.cpp
